# sifi-framework

./: .clang-format  .clang-tidy  .cppcheck-suppressed.txt  .gitmodules  .travis.yml  CMakeLists.txt  Config.cmake.in  Doxyfile.in  README.md  SiFiConfig.h.in  format_sources.sh  geom_viewer.C  helpers.cmake  run_cppcheck.sh
.github/workflows/: clang-format-check.yml  cmake_versions.yml  compile_and_test.yml  compilers.yml  configurations.yml  docker_compile_and_test.yml  main.yml
analysis/: CMakeLists.txt  analysis.cc
cmake/: check_3rdparty_cpr.cmake  check_3rdparty_magicenum.cmake  check_3rdparty_tabulate.cmake  helpers.cmake
demos/: demo_create_root_param_file.C  demo_create_root_param_from_mysql.C  demo_read_root_param_file.C
doc/: containers.md  mainpage.md  manual.md
dst/: CMakeLists.txt  dst.cc  dst_4to1.cc  dst_4to1_sim.cc  dst_sifidetres.cc  params.txt  simdst.cc
event_display/: event_display.C
lib/: CMakeLists.txt
lib/base/: CMakeLists.txt  Linkdef.h  SCalContainer.cc  SCalContainer.h  SCategory.cc  SCategory.h  SCategoryHeader.cc  SCategoryHeader.h  SCategoryIndex.cc  SCategoryIndex.h  SCategoryManager.h  SDetector.cc  SDetector.h  SDetectorManager.h  SLocator.cc  SLocator.h  SLookup.cc  SLookup.h  SLookupContainer.cc  SLookupContainer.h  SLookupManager.cc  SLookupManager.h  SPar.cc  SPar.h  SParContainer.cc  SParContainer.h  SParManager.cc  SParManager.h  STask.h  STaskManager.cc  STaskManager.h  SiFi.cc  SiFi.h  SiFiManager.cc  SiFiManager.h
lib/base/core/: SCategoryManager.cc  SCategoryManager.h  SDetector.cc  SDetector.h  SDetectorManager.cc  SDetectorManager.h  SEventBuilderConnector.cc  SEventBuilderConnector.h  SParManager.cc  SParManager.h  STask.cc  STask.h  STaskManager.cc  STaskManager.h  SiFi.cc  SiFi.h
lib/base/database/: SCalContainer.cc  SCalContainer.h  SContainer.cc  SContainer.h  SDatabase.cc  SDatabase.h  SDbAbstractInterface.cc  SDbAbstractInterface.h  SMysqlInterface.cc  SMysqlInterface.h  SPar.cc  SPar.h  SParAsciiSource.cc  SParAsciiSource.h  SParContainer.cc  SParContainer.h  SParDatabaseSource.cc  SParDatabaseSource.h  SParRootSource.cc  SParRootSource.h  SParSource.cc  SParSource.h  SRESTInterface.cc  SRESTInterface.h  SRun.cc  SRun.h  SRunContainer.cc  SRunContainer.h
lib/base/datasources/: SCBSource.cc  SCBSource.h  SDDSource.cc  SDDSource.h  SDDUnpacker.cc  SDDUnpacker.h  SDRSource.cc  SDRSource.h  SDataSource.cc  SDataSource.h  SFileSource.cc  SFileSource.h  SHLDSource.cc  SHLDSource.h  SKSSource.cc  SKSSource.h  SKSUnpacker.cc  SKSUnpacker.h  SPMISource.cc  SPMISource.h  SPetirocSource.cc  SPetirocSource.h  SRootSource.cc  SRootSource.h  SSimSource.cc  SSimSource.h  STP4to1Extractor.cc  STP4to1Extractor.h  STP4to1Source.cc  STP4to1Source.h  STPSource.cc  STPSource.h  STTreeSource.cc  STTreeSource.h  SUnpacker.cc  SUnpacker.h  _SDRSource.cc  _SDRSource.h
lib/base/datastruct/: SCalContainer.cc  SCalContainer.h  SCategory.cc  SCategory.h  SCategoryHeader.cc  SCategoryHeader.h  SCategoryIndex.cc  SCategoryIndex.h  SDDSamples.cc  SDDSamples.h  SLocator.cc  SLocator.h  SLookup.cc  SLookup.h  SPar.cc  SPar.h  SParContainer.cc  SParContainer.h
lib/base/event/: SEvent.cc  SEvent.h
lib/base/importers/: SSiFiCCDetResImporter.cc  SSiFiCCDetResImporter.h  SSimImporter.cc  SSimImporter.h  _SSiFiCCDetResImporter.h
lib/base/util/: SLoop.cc  SLoop.h  SRootFileHeader.cc  SRootFileHeader.h
lib/fibers/: CMakeLists.txt  Linkdef.h  SDetectorGeomPar.cc  SDetectorGeomPar.h  SFiberToSiPMPar.cc  SFiberToSiPMPar.h  SFibersCBUnpacker.cc  SFibersCBUnpacker.h  SFibersCal.cc  SFibersCal.h  SFibersCalSim.cc  SFibersCalSim.h  SFibersCalibrator.cc  SFibersCalibrator.h  SFibersCalibratorPar.cc  SFibersCalibratorPar.h  SFibersCluster.cc  SFibersCluster.h  SFibersClusterFinder.cc  SFibersClusterFinder.h  SFibersClusterFinderPar.cc  SFibersClusterFinderPar.h  SFibersDDCalibratorPar.cc  SFibersDDCalibratorPar.h  SFibersDDUnpacker.cc  SFibersDDUnpacker.h  SFibersDDUnpackerPar.cc  SFibersDDUnpackerPar.h  SFibersDetector.cc  SFibersDetector.h  SFibersDigitizer.cc  SFibersDigitizer.h  SFibersDigitizerPar.cc  SFibersDigitizerPar.h  SFibersGeomPar.cc  (+49 more)
lib/fibers_stack/: CMakeLists.txt  Linkdef.h  SFibersStackCal.cc  SFibersStackCal.h  SFibersStackCalSim.cc  SFibersStackCalSim.h  SFibersStackCalibrator.cc  SFibersStackCalibrator.h  SFibersStackCalibratorPar.cc  SFibersStackCalibratorPar.h  SFibersStackCluster.cc  SFibersStackCluster.h  SFibersStackClusterFinder.cc  SFibersStackClusterFinder.h  SFibersStackClusterFinderPar.cc  SFibersStackClusterFinderPar.h  SFibersStackDDCalibratorPar.cc  SFibersStackDDCalibratorPar.h  SFibersStackDDUnpacker.cc  SFibersStackDDUnpacker.h  SFibersStackDDUnpackerPar.cc  SFibersStackDDUnpackerPar.h  SFibersStackDetector.cc  SFibersStackDetector.h  SFibersStackDigitizer.cc  SFibersStackDigitizer.h  SFibersStackDigitizerPar.cc  SFibersStackDigitizerPar.h  SFibersStackGeomPar.cc  SFibersStackGeomPar.h  SFibersStackHit.cc  SFibersStackHit.h  SFibersStackHitFinder.cc  SFibersStackHitFinder.h  SFibersStackHitFinderPar.cc  SFibersStackHitFinderPar.h  SFibersStackHitSim.cc  SFibersStackHitSim.h  SFibersStackLookup.cc  SFibersStackLookup.h  (+4 more)
macros/: README.md  SignalsViewer.C  hitfinder_calibration.C  merge_params.sh  merge_params_DD_Osc.sh  merge_params_PMI.sh  params.txt  params_4to1.txt  profile.sh  read_clusters.C  rootlogon.C
obsolete/: test_runner.cpp
python/: MAPT.cpp  setup.py
tests/: CMakeLists.txt  base_database_tests.cpp  basic_tests.cpp  params.txt  params_ascii.txt  tests_basic.cpp  tests_config.h.in  tests_container.cpp  tests_cpr.cc  tests_database.cc  tests_database_ascii_source.cc  tests_database_ascii_source.cpp  tests_database_db_source.cc  tests_database_mysql_interface.cc  tests_database_mysql_source.cc  tests_database_rest_interface.cc  tests_database_root_source.cc  tests_database_root_source.cpp  tests_database_run_container.cc  tests_database_run_container.cpp  tests_event_builder_connector.cc  tests_rapidjson.cc  tests_scontainer.cc  tests_scontainer.cpp  tests_sparcontainer.cc  tests_sparcontainer.cpp
(+42 files in other folders)
